--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.21.0",
-    "prettier": "3.5.3",
+    "eslint": "^9.25.1",
+    "eslint-plugin-vue": "^9.33.0",
+    "vue-eslint-parser": "^10.1.3",
+    "@typescript-eslint/parser": "^8.31.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "prettier": "^3.5.3",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "tailwindcss": "^4.0.17",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
