--- a/package.json
+++ b/package.json
@@ -21,17 +21,23 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/test-utils": "^2.4.6",
+    "@vue/test-utils": "^2.4.0-alpha.2",
     "@vue/tsconfig": "^0.7.0",
+    "@vue/vue3-jest": "^29.2.6",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-vue": "^9.33.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.17",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-eslint": "^1.8.1",
