--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,15 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
     "paths": {
       "@/*": ["./src/*"]
-    }
-  },
+    },
+    "types": ["jest"],
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "isolatedModules": true
+  }
 }
