--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,8 +1,6 @@
 services:
   front-test:
-    build:
-      context: ./
-      dockerfile: Dockerfile
+    build: ./
     container_name: front-test
     environment:
       VITE_API_URL: http://localhost:3000
