fix: set .env example for docker-compose

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -4,6 +4,5 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: front-test
-    environment:
-      VITE_API_URL: http://localhost:3000
+    # env_file: .env.test
     entrypoint: ['npm', 'run', 'test']
