--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,6 +2,7 @@ services:
   front-test:
     build: .
     container_name: front-test
+    # env_file: .env.test
     ports:
       - '3005:3000'
     volumes:
@@ -9,5 +10,4 @@ services:
       - /app/node_modules
     environment:
       CHOKIDAR_USEPOLLING: 'true'
-      VITE_API_URL: http://localhost:3000
     entrypoint: ['npm', 'run', 'test']
