--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "npm run type-check && npm run build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "start:homolog": "npm run preview",
+    "start:prod": "serve dist"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -35,6 +37,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.5.3",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.0.17",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
